@@ -55,16 +55,6 @@ interface DbClientInterface
     public function query(string $sql, array $options = []) : DbQueryInterface;
 
     /**
-     * Create a query for calling a stored procedure.
-     *
-     * @param string $sql
-     * @param array $options
-     *
-     * @return DbQueryInterface
-     */
-    public function call(string $sql, array $options = []) : DbQueryInterface;
-
-    /**
      * @return void
      *      Throws exception on failure.
      */
