@@ -9,8 +9,6 @@ declare(strict_types=1);
 
 namespace SimpleComplex\Database;
 
-use SimpleComplex\Database\Interfaces\DbQueryInterface;
-
 use SimpleComplex\Database\Exception\DbRuntimeException;
 use SimpleComplex\Database\Exception\DbConnectionException;
 
@@ -120,26 +118,6 @@ class MsSqlClient extends DbClient
         parent::__construct($name, $databaseInfo);
 
         $this->explorableIndex[] = 'info';
-    }
-
-    /**
-     * Create a query for calling a stored procedure.
-     *
-     * @param string $sql
-     * @param array $options
-     *
-     * @return DbQueryInterface
-     */
-    public function call(string $sql, array $options = []) : DbQueryInterface
-    {
-        // sqlsrv requires no special handling when calling stored procedure.
-        $class_query = static::CLASS_QUERY;
-        /** @var DbQueryInterface|MariaDbQuery */
-        return new $class_query(
-            $this,
-            $sql,
-            $options
-        );
     }
 
     /**
